More updates to personal info.

--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
                     <h3>Major</h3>
                     <ul>
                         <li>GPA: 4.0</li>
-                        <li>Years</li>
+                        <li>2021 - Present</li>
                     </ul>
                 </div>
             </section>
@@ -47,6 +47,11 @@
                     Skills
                 </h2>
                 <ul>
+                    <li>C/C++</li>
+                    <li>Java</li>
+                    <li>LaTeX</li>
+                    <li>Embedded Systems</li>
+                    <li>SQL</li>
                     <li>CSS</li>
                     <li>HTML</li>
                     <li>JavaScript</li>
@@ -63,8 +68,9 @@
                 </h2>
                 <h3>Microsoft Learn Student Ambassador</h3>
                 <ul>
-                    <li>Some skill</li>
-                    <li>Another skill</li>
+                    <li>Github</li>
+                    <li>VSCode</li>
+                    <li>Azure Static Webpages</li>
                 </ul>
             </section>
             <section class="box">
@@ -73,10 +79,12 @@
                     Internships
                 </h2>
 
-                <h3>Company name</h3>
+                <h3>BMW Manufacturing Co, LLC :: Software Engineer Intern</h3>
                 <ul>
-                    <li>Accomplishment</li>
-                    <li>Another accomplishment</li>
+                    <li>Designed and implemented a MVP to digitize a core process, with a company-estimated savings of greater than $5m per year.</li>
+                    <li>Worked with Shopfloor team to eliminate hundreds of lines of technical debt in critical manufacturing software.</li>
+                    <li>Redefined a core production process at Plant Spartanburg that affected many departments and coordinated with multiple teams to implement the solution.</li>
+                    <li>Identified a need for an internal reporting tool, then developed solution that was adopted by many BMW production facilities globally.</li>
                 </ul>
             </section>
             <section class="box">
@@ -85,11 +93,12 @@
                     Projects
                 </h2>
                 
-                <h3>Great hackathon</h3>
-                <div>This was a great hack!</div>
+                <h3>Battery-less, Wearable Eating Detector</h3>
+                <div>Using the Texas Instruments MSP430, created a device to detect eating behavior.</div>
                 <ul>
-                    <li>Cool technology used</li>
-                    <li>Prize won</li>
+                    <li>93% Detection accuracy at suboptimal power levels ( < 2.3V)</li>
+                    <li>Completely solar powered</li>
+                    <li>On-device classification using machine learning decision trees</li>
                 </ul>
             </section>
         </article>
