Included major name for education

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resume: JCromer</title>
+    <title>Resume: Justin Cromer</title>
 
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -33,7 +33,7 @@
                         <i class="fa fa-certificate" aria-hidden="true"></i>
                         Clemson University
                     </h2>
-                    <h3>Major</h3>
+                    <h3>Major: Computer Science</h3>
                     <ul>
                         <li>GPA: 4.0</li>
                         <li>2021 - Present</li>
